--- a/config/yugabyte/regression_pipelines/Index_workloads/yb_colocated/INDG10_pkey_index_hash_tbl_point_selects_data_cardinality_bigint.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/yb_colocated/INDG10_pkey_index_hash_tbl_point_selects_data_cardinality_bigint.yaml
@@ -83,7 +83,7 @@ microbenchmark:
             - workload: INDG10_1_data_cardinality_hashtbl_point_lookup_index_scan_using_comp_skey_first_part_hash_1M
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: customer=2,schematype=colocated,partition=range,pkey=composite,cardinality=multiple,projectition=all,filtercount=one,filteron=rangepkey,filtertype=pointselect,queryshape=scan
+                    customTags: customer=2,schematype=colocated,partition=range,pkey=composite,cardinality=multiple,projection=all,filtercount=one,filteron=rangepkey,filtertype=pointselect,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from pkeyBigint1M_1 where col_bigint_card1_1=1000000
@@ -91,7 +91,7 @@ microbenchmark:
             - workload: INDG10_2_data_cardinality_hashtbl_point_lookup_index_scan_using_comp_skey_sec_part_hash_1k
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: customer=2,schematype=colocated,partition=range,pkey=composite,cardinality=multiple,projectition=all,filtercount=one,filteron=rangepkey,filtertype=pointselect,queryshape=scan
+                    customTags: customer=2,schematype=colocated,partition=range,pkey=composite,cardinality=multiple,projection=all,filtercount=one,filteron=rangepkey,filtertype=pointselect,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from pkeyBigint1M_1 where col_bigint_card2_1=1000498
@@ -99,7 +99,7 @@ microbenchmark:
             - workload: INDG10_4_data_cardinality_hashtbl_point_lookup_index_scan_using_comp_skey_sec_part_hash_1k_two_conditions
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: customer=2,schematype=colocated,partition=range,pkey=composite,cardinality=multiple,projectition=all,filtercount=two,filteron=rangepkey,filtertype=pointselect,queryshape=scan
+                    customTags: customer=2,schematype=colocated,partition=range,pkey=composite,cardinality=multiple,projection=all,filtercount=two,filteron=rangepkey,filtertype=pointselect,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from pkeyBigint1M_1 where col_bigint_card1_1=1000000 and col_bigint_card2_1=1000498
@@ -107,7 +107,7 @@ microbenchmark:
             - workload: INDG10_5_data_cardinality_hashtbl_point_lookup_index_scan_using_comp_skey_third_part_hash_100_two_conditions
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: customer=2,schematype=colocated,partition=range,pkey=composite,cardinality=multiple,projectition=all,filtercount=two,filteron=rangepkey,filtertype=pointselect,queryshape=scan
+                    customTags: customer=2,schematype=colocated,partition=range,pkey=composite,cardinality=multiple,projection=all,filtercount=two,filteron=rangepkey,filtertype=pointselect,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from pkeyBigint1M_1 where col_bigint_card1_1=1000000 and col_bigint_card3_1=5000999
