--- a/config/yugabyte/regression_pipelines/Index_workloads/yb_colocated/INDG4_pkey_range_tbl_range_selects_indexscan.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/yb_colocated/INDG4_pkey_range_tbl_range_selects_indexscan.yaml
@@ -71,7 +71,7 @@ microbenchmark:
             - workload: INDG4_1_rangetbl_range_lookup_index_scan_using_comp_pkey_first_part_range
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: schematype=colocated,partition=range,pkey=composite,cardinality=single,projectition=all,filtercount=one,filteron=rangepkey,filtertype=comparision,queryshape=scan
+                    customTags: schematype=colocated,partition=range,pkey=composite,cardinality=single,projection=all,filtercount=one,filteron=rangepkey,filtertype=comparision,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from CompositeRangetbl_1 where col_bigint_id_1>500000
@@ -79,7 +79,7 @@ microbenchmark:
             - workload: INDG4_2_rangetbl_range_lookup_index_scan_using_comp_pkey_sec_part_range
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: schematype=colocated,partition=range,pkey=composite,cardinality=single,projectition=all,filtercount=one,filteron=rangepkey,filtertype=comparision,queryshape=scan
+                    customTags: schematype=colocated,partition=range,pkey=composite,cardinality=single,projection=all,filtercount=one,filteron=rangepkey,filtertype=comparision,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from CompositeRangetbl_1 where col_bigint_id_2>500000
@@ -87,7 +87,7 @@ microbenchmark:
             - workload: INDG4_3_rangetbl_range_lookup_index_scan_using_comp_pkey_using_two_conditions_range
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: schematype=colocated,partition=range,pkey=composite,cardinality=single,projectition=all,filtercount=two,filteron=rangepkey,filtertype=comparision,queryshape=scan
+                    customTags: schematype=colocated,partition=range,pkey=composite,cardinality=single,projection=all,filtercount=two,filteron=rangepkey,filtertype=comparision,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from CompositeRangetbl_1 where col_bigint_id_1>250000 and col_bigint_id_2<750000
@@ -95,7 +95,7 @@ microbenchmark:
             - workload: INDG4_4_rangetbl_range_lookup_index_scan_using_pkey_two_conditions_range
               run:
                   - name: hashtbl_index_scan_pkey
-                    customTags: schematype=colocated,partition=range,pkey=composite,cardinality=single,projectition=all,filtercount=two,filteron=rangepkey,filtertype=comparision,queryshape=scan
+                    customTags: schematype=colocated,partition=range,pkey=composite,cardinality=single,projection=all,filtercount=two,filteron=rangepkey,filtertype=comparision,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from CompositeRangetbl_1 where col_bigint_id_1>250000 and col_bigint_id_1<750000
