--- a/config/yugabyte/regression_pipelines/Index_workloads/yb_colocated/INDG6_sec_index_range_tbl_point_selects_indexscan.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/yb_colocated/INDG6_sec_index_range_tbl_point_selects_indexscan.yaml
@@ -69,7 +69,7 @@ microbenchmark:
             - workload: INDG6_1_rangetbl_point_lookup_index_scan_using_comp_range_skey_first_part_range
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: customer=1,schematype=colocated,partition=range,skey=composite,cardinality=single,projectition=all,filtercount=one,filteron=rangeskey,filtertype=pointselect,queryshape=scan
+                    customTags: customer=1,schematype=colocated,partition=range,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=rangeskey,filtertype=pointselect,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from Rangetbl_1 where col_bigint_id_3=500009
@@ -77,7 +77,7 @@ microbenchmark:
             - workload: INDG6_2_rangetbl_point_lookup_index_scan_using_comp_range_skey_sec_part_range
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: schematype=colocated,partition=range,skey=composite,cardinality=single,projectition=all,filtercount=one,filteron=rangeskey,filtertype=pointselect,queryshape=scan
+                    customTags: schematype=colocated,partition=range,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=rangeskey,filtertype=pointselect,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from Rangetbl_1 where col_bigint_id_4=500009
@@ -85,7 +85,7 @@ microbenchmark:
             - workload: INDG6_3_rangetbl_point_lookup_index_scan_using_comp_skey_two_conditions_range
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: customer=5,schematype=colocated,partition=range,skey=composite,cardinality=single,projectition=all,filtercount=two,filteron=rangeskey,filtertype=pointselect,queryshape=scan
+                    customTags: customer=5,schematype=colocated,partition=range,skey=composite,cardinality=single,projection=all,filtercount=two,filteron=rangeskey,filtertype=pointselect,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from Rangetbl_1 where col_bigint_id_3=500009 and col_bigint_id_4=500009
