--- a/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG11_pkey_index_hash_tbl_point_selects_data_cardinality_varchar.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG11_pkey_index_hash_tbl_point_selects_data_cardinality_varchar.yaml
@@ -80,7 +80,7 @@ microbenchmark:
             - workload: INDG11_1_data_cardinality_hashtbl_point_lookup_index_scan_using_comp_skey_first_part_hash_1M
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projectition=all,filtercount=one,filteron=hashpkey,filtertype=pointselect,filterdatatype=varchar,queryshape=scan
+                    customTags: schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projection=all,filtercount=one,filteron=hashpkey,filtertype=pointselect,filterdatatype=varchar,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from pkeyVarchar10_1 where col_varchar_card1_1='id-1000000'
@@ -88,7 +88,7 @@ microbenchmark:
             - workload: INDG11_2_data_cardinality_hashtbl_point_lookup_index_scan_using_comp_skey_sec_part_hash_1k
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projectition=all,filtercount=one,filteron=rangepkey,filtertype=pointselect,filterdatatype=varchar,queryshape=scan
+                    customTags: schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projection=all,filtercount=one,filteron=rangepkey,filtertype=pointselect,filterdatatype=varchar,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from pkeyVarchar10_1 where col_varchar_card2_1='id-1000498'
@@ -97,7 +97,7 @@ microbenchmark:
             - workload: INDG11_2_data_cardinality_hashtbl_point_lookup_index_scan_using_comp_skey_sec_part_hash_1k_two_conditions
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: customer=1,schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projectition=all,filtercount=one,filteron=mixedpkey,filtertype=pointselect,filterdatatype=varchar,queryshape=scan
+                    customTags: customer=1,schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projection=all,filtercount=one,filteron=mixedpkey,filtertype=pointselect,filterdatatype=varchar,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from pkeyVarchar10_1 where col_varchar_card1_1='id-1000000' and col_varchar_card2_1='id-1000898'
@@ -105,7 +105,7 @@ microbenchmark:
             - workload: INDG11_2_data_cardinality_hashtbl_point_lookup_index_scan_using_comp_skey_third_part_hash_100_two_conditions
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projectition=all,filtercount=one,filteron=mixedpkey,filtertype=pointselect,filterdatatype=varchar,queryshape=scan
+                    customTags: schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projection=all,filtercount=one,filteron=mixedpkey,filtertype=pointselect,filterdatatype=varchar,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from pkeyVarchar10_1 where col_varchar_card1_1='id-1000000' and col_varchar_card3_1='id-7000999'
@@ -113,7 +113,7 @@ microbenchmark:
             - workload: INDG11_2_data_cardinality_hashtbl_point_lookup_index_scan_using_comp_skey_third_part_hash_100_two_conditions
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projectition=all,filtercount=one,filteron=mixedpkey,filtertype=pointselect,filterdatatype=varchar,queryshape=scan
+                    customTags: schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projection=all,filtercount=one,filteron=mixedpkey,filtertype=pointselect,filterdatatype=varchar,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from pkeyVarchar10_1 where col_varchar_card1_1='id-1000000' and col_varchar_card3_1='id-7000999'
