--- a/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG1_pkey_point_selects_hash_table_indexscan.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG1_pkey_point_selects_hash_table_indexscan.yaml
@@ -71,7 +71,7 @@ microbenchmark:
             - workload: INDG1_1_hashtbl_point_lookup_index_scan_using_comp_pkey_first_part_hash
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: customer=10,schematype=regular,partition=hash,pkey=composite,cardinality=single,projectition=all,filtercount=one,filteron=hashpkey,filtertype=pointselect,queryshape=scan
+                    customTags: customer=10,schematype=regular,partition=hash,pkey=composite,cardinality=single,projection=all,filtercount=one,filteron=hashpkey,filtertype=pointselect,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from CompositeHashtbl_1 where col_bigint_id_1=500009
@@ -79,7 +79,7 @@ microbenchmark:
             - workload: INDG1_2_hashtbl_point_lookup_index_scan_using_comp_pkey_sec_part_range
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: schematype=regular,partition=hash,pkey=composite,cardinality=single,projectition=all,filtercount=one,filteron=rangepkey,filtertype=pointselect,queryshape=scan
+                    customTags: schematype=regular,partition=hash,pkey=composite,cardinality=single,projection=all,filtercount=one,filteron=rangepkey,filtertype=pointselect,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from CompositeHashtbl_1 where col_bigint_id_2=500009
