--- a/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG4_pkey_range_tbl_range_selects_indexscan.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG4_pkey_range_tbl_range_selects_indexscan.yaml
@@ -70,7 +70,7 @@ microbenchmark:
             - workload: INDG4_1_rangetbl_range_lookup_index_scan_using_comp_pkey_first_part_range
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: schematype=regular,partition=range,pkey=composite,cardinality=single,projectition=all,filtercount=one,filteron=rangepkey,filtertype=comparision,queryshape=scan
+                    customTags: schematype=regular,partition=range,pkey=composite,cardinality=single,projection=all,filtercount=one,filteron=rangepkey,filtertype=comparision,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from CompositeRangetbl_1 where col_bigint_id_1>500000
@@ -78,7 +78,7 @@ microbenchmark:
             - workload: INDG4_2_rangetbl_range_lookup_index_scan_using_comp_pkey_sec_part_range
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: schematype=regular,partition=range,pkey=composite,cardinality=single,projectition=all,filtercount=one,filteron=rangepkey,filtertype=comparision,queryshape=scan
+                    customTags: schematype=regular,partition=range,pkey=composite,cardinality=single,projection=all,filtercount=one,filteron=rangepkey,filtertype=comparision,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from CompositeRangetbl_1 where col_bigint_id_2>500000
@@ -86,7 +86,7 @@ microbenchmark:
             - workload: INDG4_3_rangetbl_range_lookup_index_scan_using_comp_pkey_using_two_conditions_range
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: schematype=regular,partition=range,pkey=composite,cardinality=single,projectition=all,filtercount=two,filteron=rangepkey,filtertype=comparision,queryshape=scan
+                    customTags: schematype=regular,partition=range,pkey=composite,cardinality=single,projection=all,filtercount=two,filteron=rangepkey,filtertype=comparision,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from CompositeRangetbl_1 where col_bigint_id_1>250000 and col_bigint_id_2<750000
@@ -94,7 +94,7 @@ microbenchmark:
             - workload: INDG4_4_rangetbl_range_lookup_index_scan_using_pkey_two_conditions_range
               run:
                   - name: hashtbl_index_scan_pkey
-                    customTags: schematype=regular,partition=range,pkey=composite,cardinality=single,projectition=all,filtercount=two,filteron=rangepkey,filtertype=comparision,queryshape=scan
+                    customTags: schematype=regular,partition=range,pkey=composite,cardinality=single,projection=all,filtercount=two,filteron=rangepkey,filtertype=comparision,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from CompositeRangetbl_1 where col_bigint_id_1>250000 and col_bigint_id_1<750000
