--- a/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG8_sec_index_range_tbl_range_selects_indexscan.yaml
+++ b/config/yugabyte/regression_pipelines/Index_workloads/yugabyte/INDG8_sec_index_range_tbl_range_selects_indexscan.yaml
@@ -68,7 +68,7 @@ microbenchmark:
             - workload: INDG8_1_rangetbl_range_lookup_index_scan_using_comp_skey_first_part_range
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projectition=all,filtercount=one,filteron=rangeskey,filtertype=comparision,queryshape=scan
+                    customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=rangeskey,filtertype=comparision,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from Rangetbl_comp_skey_1 where col_bigint_id_2>500000
@@ -76,7 +76,7 @@ microbenchmark:
             - workload: INDG8_2_rangetbl_range_lookup_index_scan_using_comp_skey_sec_part_range
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projectition=all,filtercount=one,filteron=rangeskey,filtertype=comparision,queryshape=scan
+                    customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=rangeskey,filtertype=comparision,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from Rangetbl_comp_skey_1 where col_bigint_id_3>500000
@@ -84,7 +84,7 @@ microbenchmark:
             - workload: INDG8_3_rangetbl_range_lookup_index_scan_using_mixed_comp_skey_first_part_hash
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projectition=all,filtercount=one,filteron=hashskey,filtertype=comparision,queryshape=scan
+                    customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=hashskey,filtertype=comparision,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from Rangetbl_comp_skey_1 where col_bigint_id_4>500000
@@ -92,7 +92,7 @@ microbenchmark:
             - workload: INDG8_4_rangetbl_range_lookup_index_scan_using_mixed_comp_skey_sec_part_range
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projectition=all,filtercount=one,filteron=rangeskey,filtertype=comparision,queryshape=scan
+                    customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projection=all,filtercount=one,filteron=rangeskey,filtertype=comparision,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from Rangetbl_comp_skey_1 where col_bigint_id_5>500000
@@ -100,7 +100,7 @@ microbenchmark:
             - workload: INDG8_5_rangetbl_range_lookup_index_scan_using_comp_skey_two_conditions_range
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projectition=all,filtercount=two,filteron=rangeskey,filtertype=comparision,queryshape=scan
+                    customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projection=all,filtercount=two,filteron=rangeskey,filtertype=comparision,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from Rangetbl_comp_skey_1 where col_bigint_id_2>250000 and col_bigint_id_3<750000
@@ -108,7 +108,7 @@ microbenchmark:
             - workload: INDG8_6_rangetbl_range_lookup_index_scan_using_mixed_comp_skey_two_conditions_hash_range
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projectition=all,filtercount=two,filteron=mixedskey,filtertype=comparision,queryshape=scan
+                    customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projection=all,filtercount=two,filteron=mixedskey,filtertype=comparision,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from Rangetbl_comp_skey_1 where col_bigint_id_4>250000 and col_bigint_id_5<750000
@@ -116,7 +116,7 @@ microbenchmark:
             - workload: INDG8_7_rangetbl_range_lookup_index_scan_using_skey_two_conditions_range
               run:
                   - name: hashtbl_index_scan_pkey
-                    customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projectition=all,filtercount=two,filteron=rangeskey,filtertype=comparision,queryshape=scan
+                    customTags: schematype=regular,partition=range,skey=composite,cardinality=single,projection=all,filtercount=two,filteron=rangeskey,filtertype=comparision,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from Rangetbl_comp_skey_1 where col_bigint_id_2>250000 and col_bigint_id_2<750000
