--- a/config/yugabyte/regression_pipelines/join_workloads/yugabyte/JOING1_join_on_hash_partitioned_tbl.yaml
+++ b/config/yugabyte/regression_pipelines/join_workloads/yugabyte/JOING1_join_on_hash_partitioned_tbl.yaml
@@ -74,7 +74,7 @@ microbenchmark:
             - workload: JOING1_1_join_on_pk_of_hash_tbl
               run:
                   - name: join_on_pk_of_hash_tbl
-                    customTags: customer=2,partition=hash,pkey=hash,cardinality=single,projectition=indexed,queryshape=join,joinon=hashpkey
+                    customTags: customer=2,partition=hash,pkey=hash,cardinality=single,projection=indexed,queryshape=join,joinon=hashpkey
                     weight: 100
                     queries:
                         - query: select Hashtbl_1.col_bigint_id_1,Hashtbl_2.col_bigint_id_1 from Hashtbl_1 join Hashtbl_2 on Hashtbl_1.col_bigint_id_1=Hashtbl_2.col_bigint_id_1
@@ -82,7 +82,7 @@ microbenchmark:
             - workload: JOING1_2_join_on_pk_of_hash_tbl_with_1_filter
               run:
                   - name: join_on_pk_of_hash_tbl
-                    customTags: partition=hash,pkey=hash,cardinality=single,projectition=indexed,filteron=hashpkey,filtercount=one,filtertype=comparision,queryshape=join,joinon=hashpkey
+                    customTags: partition=hash,pkey=hash,cardinality=single,projection=indexed,filteron=hashpkey,filtercount=one,filtertype=comparision,queryshape=join,joinon=hashpkey
                     weight: 100
                     queries:
                         - query: select Hashtbl_1.col_bigint_id_1,Hashtbl_2.col_bigint_id_1 from Hashtbl_1 join Hashtbl_2 on Hashtbl_1.col_bigint_id_1=Hashtbl_2.col_bigint_id_1 where Hashtbl_1.col_bigint_id_1<100001
@@ -90,7 +90,7 @@ microbenchmark:
             - workload: JOING1_3_join_on_pk_of_hash_tbl_with_2_filter
               run:
                   - name: join_on_pk_of_hash_tbl
-                    customTags: customer=1,partition=hash,pkey=hash,cardinality=single,projectition=indexed,filteron=hashpkey,filtercount=two,filtertype=comparision,queryshape=join,joinon=hashpkey
+                    customTags: customer=1,partition=hash,pkey=hash,cardinality=single,projection=indexed,filteron=hashpkey,filtercount=two,filtertype=comparision,queryshape=join,joinon=hashpkey
                     weight: 100
                     queries:
                         - query: select Hashtbl_1.col_bigint_id_1,Hashtbl_2.col_bigint_id_1 from Hashtbl_1 join Hashtbl_2 on Hashtbl_1.col_bigint_id_1=Hashtbl_2.col_bigint_id_1 where Hashtbl_1.col_bigint_id_1<100001 and Hashtbl_2.col_bigint_id_1<100001
@@ -98,7 +98,7 @@ microbenchmark:
             - workload: JOING1_4_join_on_hashidx_of_hash_tbl
               run:
                   - name: join_on_pk_of_hash_tbl
-                    customTags: partition=hash,skey=hash,cardinality=single,projectition=indexed,queryshape=join,joinon=hashskey
+                    customTags: partition=hash,skey=hash,cardinality=single,projection=indexed,queryshape=join,joinon=hashskey
                     weight: 100
                     queries:
                         - query: select Hashtbl_1.col_bigint_id_2,Hashtbl_2.col_bigint_id_2 from Hashtbl_1 join Hashtbl_2 on Hashtbl_1.col_bigint_id_2=Hashtbl_2.col_bigint_id_2
@@ -106,7 +106,7 @@ microbenchmark:
             - workload: JOING1_5_join_on_hashidx_of_hash_tbl_with_1_filter
               run:
                   - name: join_on_pk_of_hash_tbl
-                    customTags: partition=hash,skey=hash,cardinality=single,projectition=indexed,filteron=hashskey,filtercount=one,filtertype=comparision,queryshape=join,joinon=hashskey
+                    customTags: partition=hash,skey=hash,cardinality=single,projection=indexed,filteron=hashskey,filtercount=one,filtertype=comparision,queryshape=join,joinon=hashskey
                     weight: 100
                     queries:
                         - query: select Hashtbl_1.col_bigint_id_2,Hashtbl_2.col_bigint_id_2 from Hashtbl_1 join Hashtbl_2 on Hashtbl_1.col_bigint_id_2=Hashtbl_2.col_bigint_id_2 where Hashtbl_1.col_bigint_id_2<100001
@@ -114,7 +114,7 @@ microbenchmark:
             -   workload: JOING1_6_join_on_rangeidx_of_hash_tbl
                 run:
                     -   name: join_on_pk_of_hash_tbl
-                        customTags: partition=hash,skey=asc,cardinality=single,projectition=indexed,queryshape=join,joinon=rangeskey
+                        customTags: partition=hash,skey=asc,cardinality=single,projection=indexed,queryshape=join,joinon=rangeskey
                         weight: 100
                         queries:
                             -   query: select Hashtbl_1.col_bigint_id_3,Hashtbl_2.col_bigint_id_3 from Hashtbl_1 join Hashtbl_2 on Hashtbl_1.col_bigint_id_3=Hashtbl_2.col_bigint_id_3
@@ -122,7 +122,7 @@ microbenchmark:
             -   workload: JOING1_7_join_on_rangeidx_of_hash_tbl_with_1_filter
                 run:
                     -   name: join_on_pk_of_hash_tbl
-                        customTags: customer=3,partition=hash,skey=asc,cardinality=single,projectition=indexed,filtercount=one,filteron=rangeskey,filtertype=comparision,queryshape=join,joinon=rangeskey
+                        customTags: customer=3,partition=hash,skey=asc,cardinality=single,projection=indexed,filtercount=one,filteron=rangeskey,filtertype=comparision,queryshape=join,joinon=rangeskey
                         weight: 100
                         queries:
                             -   query: select Hashtbl_1.col_bigint_id_3,Hashtbl_2.col_bigint_id_3 from Hashtbl_1 join Hashtbl_2 on Hashtbl_1.col_bigint_id_3=Hashtbl_2.col_bigint_id_3 where Hashtbl_1.col_bigint_id_3<100001
@@ -130,7 +130,7 @@ microbenchmark:
             -   workload: JOING1_8_join_on_nonidx_of_hash_tbl
                 run:
                     -   name: join_on_pk_of_hash_tbl
-                        customTags: partition=hash,cardinality=single,projectition=nonindexed,queryshape=join,joinon=nonindexed
+                        customTags: partition=hash,cardinality=single,projection=nonindexed,queryshape=join,joinon=nonindexed
                         weight: 100
                         queries:
                             -   query: select Hashtbl_1.col_bigint_id_4,Hashtbl_2.col_bigint_id_4 from Hashtbl_1 join Hashtbl_2 on Hashtbl_1.col_bigint_id_4=Hashtbl_2.col_bigint_id_4
@@ -138,7 +138,7 @@ microbenchmark:
             -   workload: JOING1_9_join_on_nonidx_of_hash_tbl_with_1_filter
                 run:
                     -   name: join_on_pk_of_hash_tbl
-                        customTags: partition=hash,cardinality=single,projectition=nonindexed,filtercount=one,filteron=nonindexed,filtertype=comparision,queryshape=join,joinon=nonindexed
+                        customTags: partition=hash,cardinality=single,projection=nonindexed,filtercount=one,filteron=nonindexed,filtertype=comparision,queryshape=join,joinon=nonindexed
                         weight: 100
                         queries:
                             -   query: select Hashtbl_1.col_bigint_id_4,Hashtbl_2.col_bigint_id_4 from Hashtbl_1 join Hashtbl_2 on Hashtbl_1.col_bigint_id_4=Hashtbl_2.col_bigint_id_4 where Hashtbl_1.col_bigint_id_4<100001
