--- a/config/yugabyte/regression_pipelines/join_workloads/yugabyte/JOING5_to_test_data_cardinality.yaml
+++ b/config/yugabyte/regression_pipelines/join_workloads/yugabyte/JOING5_to_test_data_cardinality.yaml
@@ -131,7 +131,7 @@ microbenchmark:
             - workload: JoinG5_1_1Mtbl_join_1Mtbl_two_conditions_indexscan_two_filters
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: customer=3,schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projectition=all,filtercount=two,filteron=mixedpkey,filtertype=pointselect,filterother=IN,queryshape=join,joinon=mixedpkey,joinconditions=two
+                    customTags: customer=3,schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projection=all,filtercount=two,filteron=mixedpkey,filtertype=pointselect,filterother=IN,queryshape=join,joinon=mixedpkey,joinconditions=two
                     weight: 100
                     queries:
                         - query: select * from pkeyBigint1M_1 as a join pkeyBigint1M_2 as b on a.col_bigint_card1_1=b.col_bigint_card1_1 and a.col_bigint_card3_1=b.col_bigint_card3_1 where b.col_bigint_card1_1=1000000 and  b.col_bigint_card2_1 in (1000058);
@@ -139,7 +139,7 @@ microbenchmark:
             - workload: JoinG5_2_1Mtbl_join_1Mtbl_two_conditions_indexscan_two_filters
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projectition=all,filtercount=two,filteron=mixedpkey,filtertype=pointselect,filterother=IN,queryshape=join,joinon=mixedpkey,joinconditions=two
+                    customTags: schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projection=all,filtercount=two,filteron=mixedpkey,filtertype=pointselect,filterother=IN,queryshape=join,joinon=mixedpkey,joinconditions=two
                     weight: 100
                     queries:
                         - query: select * from pkeyBigint1M_1 as a join pkeyBigint1M_2 as b on a.col_bigint_card1_1=b.col_bigint_card1_1 and a.col_bigint_card2_1=b.col_bigint_card2_1 where b.col_bigint_card1_1=1000000 and  b.col_bigint_card3_1 in (1000058);
@@ -147,7 +147,7 @@ microbenchmark:
             - workload: JoinG5_3_1Mtbl_join_1Mtbl_two_conditions_indexscan_two_filters
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: customer=7,schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projectition=all,filtercount=two,filteron=mixedpkey,filtertype=pointselect,filterother=IN,queryshape=join,joinon=mixedpkey,joinconditions=two
+                    customTags: customer=7,schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projection=all,filtercount=two,filteron=mixedpkey,filtertype=pointselect,filterother=IN,queryshape=join,joinon=mixedpkey,joinconditions=two
                     weight: 100
                     queries:
                         - query: select * from pkeyBigint1M_1 as a join pkeyBigint1M_2 as b on a.col_bigint_card1_1=b.col_bigint_card1_1 and a.col_bigint_card2_1=b.col_bigint_card2_1 where b.col_bigint_card1_1=1000000 and  b.col_bigint_card2_1 in (1000058);
@@ -156,7 +156,7 @@ microbenchmark:
             - workload: JoinG5_4_1Mtbl_join_1Mtbl_two_conditions_seqscan_two_filters
               run:
                   - name: hashtbl_index_scan_using_sec_index
-                    customTags: schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projectition=all,filtercount=one,filteron=rangepkey,filtertype=pointselect,filterother=IN,queryshape=join,joinon=rangepkey,joinconditions=two
+                    customTags: schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projection=all,filtercount=one,filteron=rangepkey,filtertype=pointselect,filterother=IN,queryshape=join,joinon=rangepkey,joinconditions=two
                     weight: 100
                     queries:
                         - query: select * from pkeyBigint1M_1 as a join pkeyBigint1M_2 as b on a.col_bigint_card2_1=b.col_bigint_card2_1 and a.col_bigint_card3_1=b.col_bigint_card3_1 where b.col_bigint_card2_1 in (1000058);
@@ -165,7 +165,7 @@ microbenchmark:
             -   workload: JoinG5_5_1Mtbl_join_10ktbl_two_conditions_indexscan_two_filters
                 run:
                     -   name: hashtbl_index_scan_using_sec_index
-                        customTags: customer=1,schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projectition=all,filtercount=two,filteron=mixedpkey,filtertype=pointselect,filterother=IN,queryshape=join,joinon=mixedpkey,joinconditions=two
+                        customTags: customer=1,schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projection=all,filtercount=two,filteron=mixedpkey,filtertype=pointselect,filterother=IN,queryshape=join,joinon=mixedpkey,joinconditions=two
                         weight: 100
                         queries:
                             -   query: select * from pkeyBigint1M_1 as a join pkeyBigint10k_1 as b on a.col_bigint_card1_1=b.col_bigint_card1_1 and a.col_bigint_card3_1=b.col_bigint_card3_1 where b.col_bigint_card1_1=1000000 and  b.col_bigint_card2_1 in (1000058);
@@ -173,7 +173,7 @@ microbenchmark:
             -   workload: JoinG5_6_1Mtbl_join_10ktbl_two_conditions_indexscan_two_filters
                 run:
                     -   name: hashtbl_index_scan_using_sec_index
-                        customTags: customer=3,schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projectition=all,filtercount=two,filteron=mixedpkey,filtertype=pointselect,filterother=IN,queryshape=join,joinon=mixedpkey,joinconditions=two
+                        customTags: customer=3,schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projection=all,filtercount=two,filteron=mixedpkey,filtertype=pointselect,filterother=IN,queryshape=join,joinon=mixedpkey,joinconditions=two
                         weight: 100
                         queries:
                             -   query: select * from pkeyBigint1M_1 as a join pkeyBigint10k_1 as b on a.col_bigint_card1_1=b.col_bigint_card1_1 and a.col_bigint_card2_1=b.col_bigint_card2_1 where b.col_bigint_card1_1=1000000 and  b.col_bigint_card3_1 in (1000058);
@@ -181,7 +181,7 @@ microbenchmark:
             -   workload: JoinG5_7_1Mtbl_join_10ktbl_two_conditions_indexscan_two_filters
                 run:
                     -   name: hashtbl_index_scan_using_sec_index
-                        customTags: customer=8,schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projectition=all,filtercount=two,filteron=mixedpkey,filtertype=pointselect,filterother=IN,queryshape=join,joinon=mixedpkey,joinconditions=two
+                        customTags: customer=8,schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projection=all,filtercount=two,filteron=mixedpkey,filtertype=pointselect,filterother=IN,queryshape=join,joinon=mixedpkey,joinconditions=two
                         weight: 100
                         queries:
                             -   query: select * from pkeyBigint1M_1 as a join pkeyBigint10k_1 as b on a.col_bigint_card1_1=b.col_bigint_card1_1 and a.col_bigint_card2_1=b.col_bigint_card2_1 where b.col_bigint_card1_1=1000000 and  b.col_bigint_card2_1 in (1000058);
@@ -190,7 +190,7 @@ microbenchmark:
             -   workload: JoinG5_8_1Mtbl_join_10ktbl_two_conditions_seqscan_two_filters
                 run:
                     -   name: hashtbl_index_scan_using_sec_index
-                        customTags: schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projectition=all,filtercount=one,filteron=rangepkey,filtertype=pointselect,filterother=IN,queryshape=join,joinon=rangepkey,joinconditions=two
+                        customTags: schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projection=all,filtercount=one,filteron=rangepkey,filtertype=pointselect,filterother=IN,queryshape=join,joinon=rangepkey,joinconditions=two
                         weight: 100
                         queries:
                             -   query: select * from pkeyBigint1M_1 as a join pkeyBigint10k_1 as b on a.col_bigint_card2_1=b.col_bigint_card2_1 and a.col_bigint_card3_1=b.col_bigint_card3_1 where b.col_bigint_card2_1 in (1000058);
