--- a/config/yugabyte/regression_pipelines/join_workloads/yugabyte/JOING8_hash_merge_join.yaml
+++ b/config/yugabyte/regression_pipelines/join_workloads/yugabyte/JOING8_hash_merge_join.yaml
@@ -70,7 +70,7 @@ microbenchmark:
             - workload: JoinG8_hash_join_fetch_1row
               run:
                   - name: hash_join_fetch_1row
-                    customTags: customer=1,schematype=regular,partition=range,pkey=asc,cardinality=single,projectition=indexed,filtercount=two,filteron=rangepkey,filtertype=pointselect,queryshape=join,joinon=rangepkey,joinconditions=one
+                    customTags: customer=1,schematype=regular,partition=range,pkey=asc,cardinality=single,projection=indexed,filtercount=two,filteron=rangepkey,filtertype=pointselect,queryshape=join,joinon=rangepkey,joinconditions=one
                     weight: 100
                     queries:
                         - query: select pkey_rangescan_join_1.col_bigint_id_1 from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_2=pkey_rangescan_join_2.col_bigint_2 and pkey_rangescan_join_1.col_bigint_id_1 = 2 and pkey_rangescan_join_2.col_bigint_id_1 = 2 ;
@@ -78,7 +78,7 @@ microbenchmark:
             - workload: JoinG8_hash_join_fetch_1000row
               run:
                   - name: hash_join_fetch_1000row
-                    customTags: schematype=regular,partition=range,pkey=asc,cardinality=single,projectition=indexed,filtercount=two,filteron=rangepkey,filtertype=pointselect,queryshape=join,joinon=rangepkey,joinconditions=one
+                    customTags: schematype=regular,partition=range,pkey=asc,cardinality=single,projection=indexed,filtercount=two,filteron=rangepkey,filtertype=pointselect,queryshape=join,joinon=rangepkey,joinconditions=one
                     weight: 100
                     queries:
                         - query: select pkey_rangescan_join_1.col_bigint_id_1 from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_2=pkey_rangescan_join_2.col_bigint_2 and pkey_rangescan_join_1.col_bigint_id_1 < 1001 and pkey_rangescan_join_2.col_bigint_id_1 < 1001 ;
@@ -86,7 +86,7 @@ microbenchmark:
             - workload: JoinG8_merge_join_fetch_1row
               run:
                   - name: merge_join_fetch_1row
-                    customTags: schematype=regular,partition=range,pkey=asc,cardinality=single,projectition=indexed,filtercount=two,filteron=rangepkey,filtertype=pointselect,queryshape=join,joinon=rangepkey,joinconditions=one
+                    customTags: schematype=regular,partition=range,pkey=asc,cardinality=single,projection=indexed,filtercount=two,filteron=rangepkey,filtertype=pointselect,queryshape=join,joinon=rangepkey,joinconditions=one
                     weight: 100
                     queries:
                         - query: select pkey_rangescan_join_1.col_bigint_id_1 from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_id_1=pkey_rangescan_join_2.col_bigint_id_1 and pkey_rangescan_join_1.col_bigint_id_1 < 2  and pkey_rangescan_join_2.col_bigint_id_1 < 2;
@@ -95,7 +95,7 @@ microbenchmark:
             - workload: JoinG8_merge_join_fetch_1000row
               run:
                   - name: merge_join_fetch_1000row
-                    customTags: customer=4,schematype=regular,partition=range,pkey=asc,cardinality=single,projectition=indexed,filtercount=two,filteron=rangepkey,filtertype=pointselect,queryshape=join,joinon=rangepkey,joinconditions=one
+                    customTags: customer=4,schematype=regular,partition=range,pkey=asc,cardinality=single,projection=indexed,filtercount=two,filteron=rangepkey,filtertype=pointselect,queryshape=join,joinon=rangepkey,joinconditions=one
                     weight: 100
                     queries:
                         - query: select pkey_rangescan_join_1.col_bigint_id_1 from pkey_rangescan_join_1 JOIN pkey_rangescan_join_2 on pkey_rangescan_join_1.col_bigint_id_1=pkey_rangescan_join_2.col_bigint_id_1 and pkey_rangescan_join_1.col_bigint_id_1 < 1001 and pkey_rangescan_join_2.col_bigint_id_1 < 1001 ;
