--- a/config/yugabyte/regression_pipelines/orderby_workloads/yugabyte/ORDG1_index_type_impact.yaml
+++ b/config/yugabyte/regression_pipelines/orderby_workloads/yugabyte/ORDG1_index_type_impact.yaml
@@ -76,21 +76,21 @@ microbenchmark:
             - workload: ORDG1_ordby_bigint_non_indexed_column
               run:
                   - name: yb_ordby_bigint_non_indexed_column
-                    customTags: customer=2,schematype=regular,partition=hash,cardinality=single,projectition=nonindexed,queryshape=orderby,orderbyon=nonindexed
+                    customTags: customer=2,schematype=regular,partition=hash,cardinality=single,projection=nonindexed,queryshape=orderby,orderbyon=nonindexed
                     weight: 100
                     queries:
                         - query: select col_bigint_id_3 from Indexed1M_1 order by col_bigint_id_3
             - workload: ORDG1_ordby_bigint_pkey_column
               run:
                   - name: yb_ordby_bigint_non_indexed_column
-                    customTags: customer=2,schematype=regular,partition=hash,cardinality=single,projectition=rangepkey,queryshape=orderby,orderbyon=rangepkey
+                    customTags: customer=2,schematype=regular,partition=hash,cardinality=single,projection=rangepkey,queryshape=orderby,orderbyon=rangepkey
                     weight: 100
                     queries:
                         - query: select col_bigint_id_1 from Indexed1M_1 order by col_bigint_id_1
             - workload: ORDG1_ordby_bigint_secondary_indexed_column
               run:
                   - name: yb_ordby_bigint_secondary_indexed_column
-                    customTags: schematype=regular,partition=hash,cardinality=single,projectition=rangeskey,queryshape=orderby,orderbyon=rangeskey
+                    customTags: schematype=regular,partition=hash,cardinality=single,projection=rangeskey,queryshape=orderby,orderbyon=rangeskey
                     weight: 100
                     queries:
                         - query: select col_bigint_id_2 from Indexed1M_1 order by col_bigint_id_2
