--- a/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG5_pkey_hash_pointLookup_increasingColumn.yaml
+++ b/config/yugabyte/regression_pipelines/scan_workloads/yugabyte/scanG5_pkey_hash_pointLookup_increasingColumn.yaml
@@ -75,7 +75,7 @@ microbenchmark:
             - workload: scanG5_pkey_hash_pointLookup_table1column_fetch1column
               run:
                   - name: pkey_hash_pointLookup_table1column_fetch1column_test
-                    customTags: schematype=regular,partition=hash,pkey=hash,cardinality=single,projectition=all,filtercount=one,filteron=hashpkey,filtertype=pointselect,queryshape=scan
+                    customTags: schematype=regular,partition=hash,pkey=hash,cardinality=single,projection=all,filtercount=one,filteron=hashpkey,filtertype=pointselect,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from pkey_hash_pointLookup_1column_1 where col_bigint_id_1=(?)
@@ -86,7 +86,7 @@ microbenchmark:
             - workload: scanG5_pkey_hash_pointLookup_table10column_fetch10column
               run:
                   - name: pkey_hash_pointLookup_table10column_fetch10column_test
-                    customTags: schematype=regular,partition=hash,pkey=hash,cardinality=single,projectition=all,filtercount=one,filteron=hashpkey,filtertype=pointselect,queryshape=scan
+                    customTags: schematype=regular,partition=hash,pkey=hash,cardinality=single,projection=all,filtercount=one,filteron=hashpkey,filtertype=pointselect,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from pkey_hash_pointLookup_10column_1 where col_bigint_id_1=(?)
@@ -97,7 +97,7 @@ microbenchmark:
             - workload: scanG5_pkey_hash_pointLookup_table100column_fetch100column
               run:
                   - name: pkey_hash_pointLookup_table100column_fetch100column_test
-                    customTags: schematype=regular,partition=hash,pkey=hash,cardinality=single,projectition=all,filtercount=one,filteron=hashpkey,filtertype=pointselect,queryshape=scan
+                    customTags: schematype=regular,partition=hash,pkey=hash,cardinality=single,projection=all,filtercount=one,filteron=hashpkey,filtertype=pointselect,queryshape=scan
                     weight: 100
                     queries:
                         - query: select * from pkey_hash_pointLookup_100column_1 where col_bigint_id_1=(?)
